<resources>
    <string name="app_name">Reservation</string>
    <string name="signin">회원가입</string>
    <string name="password">비밀번호</string>
    <string name="email">이메일</string>
    <string name="name">이름</string>
    <string name="id">아이디</string>
    <string name="login">로그인</string>
    <string name="input_id">아이디를 입력해주세요.</string>
    <string name="input_password">비밀번호를 입력해주세요.</string>
    <string name="input_name">이름을 입력해주세요.</string>
    <string name="success_signin">회원가입 성공</string>
    <string name="fail_signin">회원가입 실패</string>
    <string name="success_login">로그인 성공</string>
    <string name="fail_login">로그인 실패</string>
    <string name="title_store">매장 목록</string>
    <string name="location">주소</string>
    <string name="opening_hour">영업시간</string>
    <string name="holiday">휴무일</string>
    <string name="contact">연락처</string>
    <string name="title_activity_map">Map</string>
    <string name="permission_rationale_location">현재 위치정보 사용 동의</string>
    <string name="permission_required_toast">권한이 필요합니다.</string>
    <string name="success_insert">등록 완료</string>
    <string name="fail_insert">등록 실패</string>
    <string name="my_waiting">나의 대기순번</string>
    <string name="current_waiting">현대 대기인원</string>
    <string name="prediction_time">대기 예상시간</string>
    <string name="lookat">위치확인</string>
    <string name="waiting_room">대기실</string>
    <string name="reservation">예약하기</string>
    <string name="game">복불복게임</string>
    <string name="reservation_cancel">예약취소</string>
    <string name="reservation_modify">예약조정</string>
    <string name="enter_comment">댓글 보기</string>
    <string name="fail_request_reservation">예약정보 불러오기 실패</string>
    <string name="yield">양보하기</string>
    <string name="p2p">1:1 대화신청</string>
    <string name="send">전송</string>
    <string name="empty_content">내용을 입력해주세요.</string>
    <string name="fail_write_comment">댓글 작성 실패.</string>
    <string name="exit">퇴장</string>
    <string name="empty_join">참여자가 없습니다.</string>
    <string name="fail_exit">퇴장 실패</string>
    <string name="success_exit">퇴장 성공</string>
    <string name="fail_join">참여 실패</string>
    <string name="fail_modify_waiting">예약 수정 실패</string>
    <string name="fail_delete_waiting">예약 취소 실패</string>
    <string name="success_delete_waiting">예약 취소 성공</string>
    <string name="gcm_senderId">172312087190</string>
    <string name="already_reservation">이미 예약중입니다.</string>
    <string name="no">아니요</string>
    <string name="yes">예</string>
    <string name="fail_yield">양보 불가능.</string>
    <string name="success_yield">양보 성공</string>
    <string name="game_end">게임 종료. 대기순번을 확인해주세요</string>
    <string name="need_permission">권한이 필요합니다.</string>
    <string name="success_modify_waiting">예약조정 완료</string>
    <string name="logout">로그아웃</string>
    <string name="msg_logout">로그아웃 하시겠습니까?</string>
    <string name="enter">입장</string>
    <string name="msg_enter">이 화면을\n카운터 직원에게\n보여주세요.</string>
    <string name="success_enter">입장 완료</string>
    <string name="fail_enter">입장 실패</string>
    <string name="home">홈</string>
    <string name="favorite">즐겨찾기</string>
    <string name="info">정보</string>
    <string name="review">리뷰</string>
    <string name="star">평점</string>
    <string name="write_review">리뷰를 남겨주세요.</string>
    <string name="rating">평점</string>
    <string name="title_write_review">리뷰 작성</string>
    <string name="complete">완료</string>
    <string name="not_exist_waiting">예약하신 매장이 없습니다.</string>
    <string name="input_content">내용을 입력해주세요.</string>
    <string name="fail_write_review">리뷰작성 실패.</string>
    <string name="success_write_review">리뷰 작성 완료.</string>
    <string name="current_waiting_number">현재 입장 번호</string>
    <string name="game_rule">3명 참여시 순번 셔플</string>
</resources>
