<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="vertical"
android:padding="@dimen/padding_default">

<TextView
    style="@style/TextSubTitle"
    android:text="@string/location" />

<TextView
    android:id="@+id/tv_location"
    style="@style/TextContent" />

<TextView
    style="@style/TextSubTitle"
    android:text="@string/opening_hour" />

<TextView
    android:id="@+id/tv_opening_hour"
    style="@style/TextContent" />

<TextView
    style="@style/TextSubTitle"
    android:text="@string/holiday" />

<TextView
    android:id="@+id/tv_holiday"
    style="@style/TextContent" />

<TextView
    style="@style/TextSubTitle"
    android:text="@string/contact" />

<TextView
    android:id="@+id/tv_contact"
    style="@style/TextContent" />
</LinearLayout>